# kvt

./: .gitignore  AGENTS.md  Dockerfile  README.md  SKILL.md  VISION.md  compose.yaml  docker-entrypoint.sh  go.mod  go.sum
cmd/kvt/: main.go  main_test.go
cmd/kvt-fuse/: Cargo.toml
cmd/kvt-fuse/src/: fs.rs  lib.rs  main.rs
docs/superpowers/plans/: 2026-07-07-full-scope-kvt-implementation.md  2026-07-08-request-scoped-glob-access.md  2026-07-08-review-fixes.md
docs/verification/: full-scope-audit.md
internal/access/: policy.go  policy_test.go
internal/chunk/: chunk.go  chunk_test.go
internal/config/: config.go  config_test.go
internal/embed/: embed.go  embed_test.go  ollama.go  openai.go
internal/frontmatter/: document.go  document_test.go
internal/gitops/: git.go  git_test.go
internal/httpapi/: server.go  server_test.go
internal/index/: index.go  index_test.go  query.go  reconcile.go  schema.go  sync.go
internal/mcp/: howto.go  server.go  server_test.go  tools.go
internal/ontology/: ontology.go  ontology_test.go
internal/pathutil/: path.go  path_test.go
internal/rerank/: openai.go  rerank.go  rerank_test.go
internal/responsebudget/: budget.go  budget_test.go
internal/search/: rrf.go  search.go  search_test.go
internal/service/: howto.go  index.go  init.go  init_test.go  lock.go  lock_test.go  ops.go  push.go  push_test.go  read.go  search_test.go  service.go  service_test.go  types.go  validate.go  write.go
internal/testutil/: require.go
internal/vault/: index.go  links.go  vault.go  vault_test.go
(+3 files in other folders)
